# qnote

./: BUILD.md  CLI_EXAMPLES.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
scripts/: build.sh  clippy.sh  format.sh  install.sh  pre-commit.sh
src/: cli.rs  db.rs  main.rs  utils.rs
src/commands/: config.rs  io.rs  list.rs  mod.rs  note_ops.rs
src/config/: database.rs  defaults.rs  editor.rs  keybindings.rs  mod.rs  theme.rs  ui.rs
src/tui/: app.rs  editor.rs  markdown.rs  mod.rs  render.rs
src/tui/app/: input.rs  mod.rs  navigation.rs  search.rs  selection.rs  sorting.rs
src/utils/: conversion.rs  formatting.rs  interaction.rs  mod.rs  parsing.rs
