[package]
name = "qnote"
version = "1.0.2"
edition = "2024"
authors = ["adi-sen"]
description = "A fast, lightweight terminal-based note-taking application"
repository = "https://github.com/adi-sen/qnote"
license = "MIT"
keywords = ["notes", "tui", "terminal", "markdown", "cli"]
categories = ["command-line-utilities", "text-editors"]
readme = "README.md"

[features]
default = []
bundled = ["rusqlite/bundled"]

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = 3
codegen-units = 1

[dependencies]
rusqlite = { version = "0.37.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", default-features = false, features = ["std"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5.49", default-features = false, features = ["derive", "std", "help", "usage"] }
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
anyhow = "1.0.100"
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
pulldown-cmark = { version = "0.12", default-features = false }
toml = "0.8"
